[gd_scene load_steps=12 format=2]

[ext_resource path="res://Data/Fonts/fontRobotoLight.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Data/Fonts/fontRobotoMedium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/scrSetup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 62, 17 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxLine" id=5]
color = Color( 1, 1, 1, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=6]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=8]
OptionButton/colors/font_color = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
OptionButton/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 7
OptionButton/constants/hseparation = 11
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = SubResource( 4 )
OptionButton/styles/focus = SubResource( 4 )
OptionButton/styles/hover = SubResource( 4 )
OptionButton/styles/normal = SubResource( 4 )
OptionButton/styles/pressed = SubResource( 4 )
PopupMenu/colors/font_color = Color( 1, 1, 1, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 12
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 5 )
PopupMenu/styles/labeled_separator_left = SubResource( 6 )
PopupMenu/styles/labeled_separator_right = SubResource( 6 )
PopupMenu/styles/panel = SubResource( 7 )
PopupMenu/styles/panel_disabled = SubResource( 7 )
PopupMenu/styles/separator = SubResource( 6 )

[node name="scnSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="txtTittle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_top = 32.0
margin_right = 63.0
margin_bottom = 63.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "&setup1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtConfirm" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -64.0
margin_right = 63.0
margin_bottom = -33.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "&setup2"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnConfirm" type="TouchScreenButton" parent="txtConfirm"]
shape = SubResource( 3 )

[node name="obLanguages" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -15.0
margin_right = 94.5
margin_bottom = 15.0
grow_horizontal = 2
theme = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
custom_constants/arrow_margin = -1
text = "English"
items = [ "English", null, false, 0, null, "Portugues", null, false, 1, null, "Español", null, false, 2, null, "Deutsche", null, false, 3, null, "Français", null, false, 4, null, "Polskie", null, false, 5, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="released" from="txtConfirm/btnConfirm" to="." method="_on_btnConfirm_released"]
[connection signal="item_selected" from="obLanguages" to="." method="_on_obLanguages_item_selected"]
